Add config for bom stations

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -6,6 +6,37 @@ input {
 
 ## Add your filters / logstash plugins configuration here
 
+filter {
+  csv {
+    columns => [
+        "Site",
+        "Dist",
+        "Site name",
+        "Start",
+        "End",
+        "Lat",
+        "Lon",
+        "Source",
+        "STA",
+        "Height (m)",
+        "Bar_ht",
+        "WMO"
+    ]
+    separator => ","
+    convert => {
+        "Site" => "integer"
+        "Dist" => "integer"
+        "Start" => "integer"
+        "End" => "integer"
+        "Lat" => "float"
+        "Lon" => "float"
+        "Height (m)" => "float"
+        "Bar_ht" => "float"
+        "WMO" => "integer"
+    }
+  }
+}
+
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
